deployment/networking/http/kubeflow/kubeflow-minio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kubeflow-minio-virtualservice
spec:
  hosts:
  - "kubeflow.minio.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: minio-service.kubeflow.svc.cluster.local
        port:
          number: 9000
